--- a/style.css
+++ b/style.css
@@ -1,72 +1,290 @@
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,700;1,9..144,700&family=Montserrat:ital,wght@0,500;0,700;1,500;1,700&display=swap");
-
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 body{
   background-color: antiquewhite;
   font-family: "Montserrat", sans-serif;
 }
-.card{
-  border: none;
+.container{
+  width: 100%;
+  height: 100vh;
+  background-color: antiquewhite;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.box{
+  width: 700px;
+  height: 525px;
+  background-color: white;
   border-radius: 10px;
-  box-shadow: 5px 5px 10px lightgray;
-  height: 450px;
-  width: 600px;
-  top: 80px;
-  padding-left: 0%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 
 }
-.text1 {
-  padding-top: 25px;
+.photo{
+  height: 100%;
+  width: 50%;
+}
+.desk-top{
+  width: 100%;
+}
+.desktop-photo{
+  width: 350px;
+  border-radius: 10px 0 0 10px;
+}
+.text{
+  padding: 2.5rem;
+  width: 50%;
+}
+.uppercase{
   text-transform: uppercase;
   letter-spacing: 3px;
   color: hsl(228deg, 12%, 48%);
-  text-align: left;
 }
-
-.text2 {
+.h1{
   font-family: "Fraunces", serif;
   color: hsl(212deg, 21%, 14%);
-  text-align: left;
-  
 }
-.text3 {
+.discription{
   color: hsl(228deg, 12%, 48%);
   line-height: 1.5;
-  text-align: left;
+
 }
-.img{
-  width: 300px;
-  height: 450px;
-  border-radius: 10px 0 0 10px;
+.price{
+  width: 80%;
+  margin: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  color: hsl(158deg, 36%, 37%);
+
 }
-.p{
-  text-align: left;
-  color: green;
-}
-.real {
+.real{
   font-family: "Fraunces", serif;
   font-size: 2rem;
-  
 }
-.fake {
+.fake{
   text-decoration: line-through;
-  color: rgb(136, 132, 132);
-  padding-left: 10px;
-  
+}
+.btn{
+  background-color: hsl(158deg, 36%, 37%);
+  color: hsl(0deg, 0%, 100%);
+  width: fit-content;
+  padding: 1rem 4rem;
+  border-radius: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  margin-right: 2px;
+
+}
+.btn:hover{
+  background-color: hsl(158deg, 36%, 16%);
+}
+.svg{
+  margin-right: 2px;
 }
 .footer {
-  position:absolute;
-  bottom: 5px;
-  left: 500px;
+  position: center;
 }
-.footer p {
+ .p {
   font-size: 11px;
   text-align: center;
 }
-.footer p a {
+ .a {
   color: hsl(228deg, 45%, 44%);
 }
-.buttons{
-  background-color: green;
+
+@media (max-width: 1020px) {
+
+  .box{
+    width: 500px;
+    height: 320px;
+    background-color: white;
+    border-radius: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   
-  width:250px;
+  }
+  .photo{
+    width: unset;
+  }
+  
+  .desktop-photo{
+    width: 213px;
+    border-radius: 10px 0 0 10px;
+  }
+  .text{
+    padding: 2.5rem;
+    width: unset;
+  }
+  .uppercase{
+    font-size: 14px;
+  }
+  .h1{
+    font-size: 25px;
+  }
+  .discription{
+    font-size: 14px;
+  
+  }
+  .price{
+    margin: 1rem 0;
+  
+  }
+  .real{
+    font-size: 25px;
+  }
+  .fake{
+    font-size: 14px;
+  }
+  .btn{
+    
+    padding: 0.5rem 2rem;
+    
+  
+  }  
+  
+  .footer {
+    position:absolute;
+    bottom: 0px;
+
+  }
+  
+}
+@media (max-width: 769px) {
+  .box{
+    width: 60%;
+    height: unset;
+    background-color: white;
+    border-radius: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  
+  }
+  .photo{
+    width: 100%;
+    height: unset;
+  }
+  
+  .desktop-photo{
+    display: none;
+  }
+  .mobile-photo{
+    display: block;
+  }
+  .mobile{
+    max-width: 100%;
+    border-radius: 10px 10px 0 0;
+
+  }
+  .text{
+    padding: 1.5rem;
+    width: 100%;
+  }
+  .uppercase{
+    font-size: 14px;
+  }
+  
+  .price{
+   width: 70%;
+  
+  }
+  
+}
+@media (max-width: 426px) {
+  .box{
+    width: 90%;
+    height: unset;
+    background-color: white;
+    border-radius: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  
+  }
+  .photo{
+    width: 100%;
+    height: unset;
+  }
+  
+  .desktop-photo{
+    display: none;
+  }
+  .mobile-photo{
+    display: block;
+    width: 100%;
+  }
+  .mobile{
+    max-width: 100%;
+    border-radius: 10px 10px 0 0;
+
+  }
+  .uppercase{
+    font-size: 14px;
+  }
+  .h1{
+    font-size: 25px;
+  }
+  .discription{
+    font-size: 14px;
+  }
+  .text{
+    padding: 2rem;
+    width: 100%;
+  }
+  .uppercase{
+    font-size: 14px;
+  }
+  
+  .price{
+   width: 85%;
+   margin: 1rem 0;
+  
+  }
+  .real{
+    font-size: 25px;
+  }
+  .fake{
+    font-size: 14px;
+  }
+  .btn{
+    padding: 1rem 2rem;
+  }
+  .footer p{
+    font-size: 9px;
+  }
 }
